modify git ignore file
modify git ignore file

--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,8 @@ sysinfo.txt
 # Crashlytics generated file
 crashlytics-build.properties
 
+HanoiFall/Library
+HanoiFall/Logs
+HanoiFall/UserSettings
+HanoiFall/ProjectSettings
+HanoiFall/obj
